[package]
name = "megastore_search"
version = "0.1.0"
edition = "2021"
authors = ["Equipe MegaStore <megastore@ficticio.com>"]
description = "Sistema de busca otimizado para catálogo de produtos da MegaStore, implementado em Rust."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
hashbrown = "0.14"
